--- a/client/src/common/common.styl
+++ b/client/src/common/common.styl
@@ -117,17 +117,17 @@
   border-color #e3e3e3!important
   box-shadow none!important
 .color-success
-  color #67c23a
+  color #67c23a!important
 .color-red
-  color red
+  color red!important
 .color-main
- color #4169E1
+  color #4169E1!important
 .color-light-grey
- color #898989
+  color #898989!important
 .color-gold
-  color gold
+  color gold!important
 .color-orange
-  color orange
+  color orange!important
 
 .w-200
   width 200px!important
@@ -170,163 +170,8 @@
   -webkit-box-orient vertical!important
   -webkit-line-clamp 3!important
   display -webkit-box!important
-// 模块view
-.module-view-wrap
-  margin 20px
-  min-height calc(100% - 40px)
-  background-color white
-  border-radius 4px
-  overflow hidden
-  box-shadow 0 2px 4px rgba(0,21,41,.08)
-  position relative
-  .search-title
-    min-width 60px
-    font-size 14px
-  .search-input,.search-select
-    min-width 234px
-  .module-title
-    color #4169E1
-    font-size 14px
-    font-weight bold
-    line-height 32px
-  .table-wrap
-    margin 20px
-    min-height 300px
-    .thumb-img
-      width 120px
-      height 80px
-    .cover-img
-      width 80px
-      height 80px
-    .banner-img
-      width 128px
-      height 52px
-    .button-wrap
-      margin 20px
-  .operate-view-wrap
-    position absolute
-    top 20px
-    right 20px
-  .condition-title
-    line-height 32px
-    height 32px
-    font-size 14px
 
-.module-search-view-wrap
-  margin 20px
-  min-height 100px
-  background-color white
-  border-radius 2px
-  box-shadow 0 2px 4px rgba(0,21,41,.08)
-  .search-title
-    margin-top 20px
-    height 30px
-    line-height 30px
-    padding-left 20px
-    width 100px
-    padding-right 20px
-    font-weight 500
-    border-radius 20px
-    margin-left 20px
-  .search-container
-    flex-direction row
-    display flex
-    flex-wrap wrap
-    .cell-title
-      white-space nowrap
-      overflow hidden
-      text-align center
-      padding-right 10px
-    .search-input
-      width 200px
-    .search-select
-      width 200px
-  .button-view-wrap
-    width 100%
-    margin-top 10px
-    display flex
-    justify-content flex-end
-    flex-direction row
-    height 52px
-// 弹窗
 .modal-view-wrap
-  .normal-cell
-    width 100%
-  .item-cell
-    width 100%
-    min-height 40px
-    position relative
-    .cover-img,.img-uploader
-      width 102px
-      height 102px
-      display block
-    .empty-img
-      width 102px
-      height 102px
-      display block
-      border 1px solid #eeeeee
-      line-height 102px
-      text-align center
-    .cell-right
-      width calc(100% - 80px)
-    .item-title
-      min-width 50px
-      max-height 60px
-      line-height 40px
-      color text-color-666
-    .item-title-top
-      min-width 50px
-      color text-color-666
-    .item-desc
-      min-height 40px
-      max-width 100%
-      position relative
-      overflow hidden
-      .desc
-        max-width calc(100% - 140px)
-        overflow hidden
-        white-space nowrap
-        text-overflow ellipsis
-    .normal-select
-      min-width 150px
-    .remark-text
-      color color-r2
-      height 28px
-      line-height 28px
-    .select-view
-      min-width 120px
-    .delete-wrap
-      width 40px
-      height 20px
-      flex-direction row
-      display flex
-      align-items center
-      justify-content center
-      .delete-btn
-        color #f56c6c
-        cursor pointer
-    .tag-fill
-      background-color #4169E1
-      color #ffffff
-      padding-right 12px
-      padding-left 12px
-      height 20px
-      border-radius 2px
-    .tag-outline
-      border 1px solid #4169E1
-      color #4169E1
-      padding-right 12px
-      height 20px
-      padding-left 12px
-      border-radius 2px
-  .roles-wrap
-    .role-choose-cell
-      height 60px
-    .lines
-      height 1px
-      background-color #eeeeee
-// 去掉antd modal 自带样式
-.sample-view-modal
   .normal-content
     padding-top 24px
     padding-left 24px
@@ -337,14 +182,10 @@
       border none
     .ant-modal-footer
       border none
-
-// 排序modal
-.sort-module-view-wrap
-  width 100%
-  .sort-input
-    text-align center
+  .item-cell
     width 100%
-    padding-left 20px
-    padding-right 20px
-
-
+  .item-title
+    min-width 80px
+    text-align right
+  .item-cell-content
+    max-width calc(100% - 100px)
