--- a/client/src/pages/404/index.styl
+++ b/client/src/pages/404/index.styl
@@ -2,9 +2,11 @@
 .not-fount-container
   width 100%
   height 100%
+  max-width 500px
+  background-color #ffffff
   .icon-img
-    width 447px
-    height 220px
+    width 400px
+    height 320px
     margin-top 100px
   .text
     font-size 16px
