--- a/client/src/pages/views/room/index.styl
+++ b/client/src/pages/views/room/index.styl
@@ -13,7 +13,7 @@
       height calc(100% - 120px)
       overflow-y scroll
       // 遮住滚动条
-      width calc(100%)
+      width calc(100% + 20px)
       .welcome-item
         color #666666
         margin-top 10px
@@ -78,11 +78,13 @@
           .seat-status
             font-size 14px
           .cell-text
-            width 60px
+            width 70px
             text-align center
-            white-space nowrap
             overflow hidden
-      .game-start-btn
+            .kick-btn,.kick-btn:focus,.kick-btn:hover,.kick-btn:after
+              border none
+              box-shadow none!important
+      .full-btn
         width 100%
     .header
       width 100%
@@ -106,4 +108,9 @@
         width 100%
         height 100%
         font-size 16px
-
+.error-view
+  width 100%
+  .desc
+    font-size 16px
+    font-weight 500
+    text-align center
