创建游戏实例

--- a/client/src/common/common.styl
+++ b/client/src/common/common.styl
@@ -61,61 +61,73 @@
   background-color #4169E1!important
   border-color #4169E1!important
   box-shadow none!important
+  transition none!important
 .btn-success,.btn-success:hover,.btn-success:after,.btn-success:focus
   color #fff!important
   background-color #67c23a!important
   border-color #67c23a!important
   box-shadow none!important
+  transition none!important
 .btn-info,.btn-info:hover,.btn-info:after,.btn-info:focus
   color #fff!important
   background-color #909399!important
   border-color #909399!important
   box-shadow none!important
+  transition none!important
 .btn-warning,.btn-warning:hover,.btn-warning:after,.btn-warning:focus
   color #fff!important
   background-color #e6a23c!important
   border-color #e6a23c!important
   box-shadow none!important
+  transition none!important
 .btn-danger,.btn-danger:hover,.btn-danger:after,.btn-danger:focus
   color #fff!important
   background-color #f56c6c!important
   border-color #f56c6c!important
   box-shadow none!important
+  transition none!important
 .btn-delete,.btn-delete:hover,.btn-delete:after,.btn-delete:focus
   color #fff!important
   background-color #f55066!important
   border-color #f55066!important
   box-shadow none!important
+  transition none!important
 .btn-nature,.btn-nature:hover,.btn-nature:after,.btn-nature:focus
   color #fff!important
   background-color #b8f1ed!important
   border-color #b8f1ed!important
   box-shadow none!important
+  transition none!important
 .btn-warm,.btn-warm:hover,.btn-warm:after,.btn-warm:focus
   color #fff!important
   background-color #ffe647!important
   border-color #ffe647!important
   box-shadow none!important
+  transition none!important
 .btn-tag,.btn-tag:hover,.btn-tag:after,.btn-tag:focus
   color #fff!important
   background-color #f1b8f1!important
   border-color #f1b8f1!important
   box-shadow none!important
+  transition none!important
 .btn-folk,.btn-folk:hover,.btn-folk:after,.btn-folk:focus
   color #fff!important
   background-color #ac5e74!important
   border-color #ac5e74!important
   box-shadow none!important
+  transition none!important
 .btn-error,.btn-error:hover,.btn-error:after,.btn-error:focus
   color #fff!important
   background-color red!important
   border-color red!important
   box-shadow none!important
+  transition none!important
 .btn-disabled,.btn-disabled:hover,.btn-disabled:after,.btn-disabled:focus
   color #999999!important
   background-color #eeeeee!important
   border-color #e3e3e3!important
   box-shadow none!important
+  transition none!important
 .color-success
   color #67c23a!important
 .color-red
