骨架搭建完成

--- a/client/src/common/common.styl
+++ b/client/src/common/common.styl
@@ -140,7 +140,22 @@
   color gold!important
 .color-orange
   color orange!important
-
+.color-white
+  color white!important
+.color-black
+  color black!important
+.bg-green
+  background-color #67c23a!important
+.bg-red
+  background-color red!important
+.bg-pink
+  background-color pink!important
+.bg-light-blue
+  background-color #b8f1ed!important
+.w-70
+  width 70px!important
+.w-80
+  width 80px!important
 .w-200
   width 200px!important
 .w-300
@@ -174,7 +189,8 @@
   height 300px!important
 .min-h-200
   min-height 200px!important
-
+.bolder
+  font-weight bold!important
 .text-overflow-3
   text-overflow ellipsis!important
   overflow hidden!important
