--- a/client/src/pages/views/room/index.styl
+++ b/client/src/pages/views/room/index.styl
@@ -8,7 +8,7 @@
     width 100%
     height 100vh
     overflow hidden
-    .room-content
+    .room-content,.game-content
       padding 20px
       height calc(100% - 120px)
       overflow-y scroll
@@ -24,6 +24,8 @@
         .create-user-btn
           width 100%
       .normal-title
+        height 24px
+        line-height 24px
         font-size 14px
         font-weight 500
       .wait-content
@@ -86,6 +88,127 @@
               box-shadow none!important
       .full-btn
         width 100%
+    .game-content
+      .normal-title
+        font-size 14px
+        font-weight 500
+      .desk-content
+        border-radius 4px
+        border 1px solid #eeeeee
+        overflow hidden
+        height 300px
+        position relative
+        padding 5px
+        flex-wrap wrap
+        flex-direction row
+        display flex
+        .player-cell
+          width 33.33% - 2.5px
+          height 80px
+          .player-seat-cell
+            width 130px
+            height 80px
+            border-radius 4px
+            position relative
+            overflow hidden
+            .txt
+              font-size 14px
+              color white
+            .bolder
+              font-weight 500
+            .tag-view
+              position absolute
+              left 0
+              right 0
+              top 0
+              bottom 0
+              .tag
+                position absolute
+                height 20px
+                font-size 12px
+                color white
+                font-weight bold
+                padding-left 8px
+                padding-right 8px
+                border-radius 10px
+                text-align center
+                line-height 20px
+              .camp-good,.camp-wolf
+                left 4px
+                top 4px
+              .role-name
+                top 4px
+                right 4px
+            .dead-view
+              position absolute
+              left 0
+              right 0
+              top 0
+              bottom 0
+              .dead-mask
+                position absolute
+                left 0
+                right 0
+                top 0
+                bottom 0
+                background-color black
+                opacity 0.3
+              .dead-text
+                font-weight bold
+                font-size 24px
+                text-align center
+                color red
+                line-height 80px
+      .notice-content
+        border-radius 2px
+        overflow hidden
+        max-height 180px
+        min-height 24px
+        position relative
+        display flex
+        flex-wrap wrap
+        .txt
+          line-height 24px
+          color black
+          font-weight 500
+          font-style oblique
+          font-size 14px
+      .skill-content
+        border 1px solid #eeeeee
+        border-radius 2px
+        overflow hidden
+        min-height 70px
+        position relative
+        display flex
+        flex-wrap wrap
+        width calc(100% - 80px)
+        .skill-btn
+          min-width 80px
+          margin-left 20px
+      .role-bg-wolf
+        background-color black
+      .role-bg-villager
+        background-color #67c23a
+      .role-bg-predictor
+        background-color gold
+      .role-bg-witch
+        background-color purple
+      .role-bg-hunter
+        background-color #c28164
+      .role-txt-wolf
+        color red
+      .role-txt-villager
+        color #67c23a
+      .role-txt-predictor
+        color gold
+      .role-txt-witch
+        color purple
+      .role-txt-hunter
+        color #c28164
+      .role-txt-camp-good
+        color #67c23a
+      .role-txt-camp-wolf
+        color red
     .header
       width 100%
       box-shadow 0 2px 4px rgba(0,21,41,.08)
@@ -114,3 +237,90 @@
     font-size 16px
     font-weight 500
     text-align center
+
+.game-record-modal
+  .content-wrap
+    width 100%
+    .content-view
+      border-radius 4px
+      border 1px solid #eeeeee
+      overflow hidden
+      height 300px
+      position relative
+      margin-left 20px
+      margin-right 20px
+      padding 10px 20px 20px 20px
+      .record-cell
+        line-height 16px
+      .cell-title
+        text-align center
+        font-weight bold
+        font-size 16px
+        line-height 24px
+        margin-top 8px
+        margin-bottom 8px
+    .content-view-scroll
+      overflow-y scroll
+.player-click-modal
+  .content-wrap
+    width 100%
+    .content-view
+      border-radius 4px
+      border 1px solid #eeeeee
+      overflow hidden
+      height 300px
+      position relative
+      margin-left 20px
+      margin-right 20px
+      padding 10px
+      flex-wrap wrap
+      flex-direction row
+      justify-content space-around
+      display flex
+      .player-cell
+        width 120px
+        height 70px
+        margin 10px
+        border-radius 2px
+        position relative
+        .camp-tag
+          height 20px
+          position absolute
+          border-radius 10px
+          right 4px
+          top 4px
+          padding-left 10px
+          padding-right 10px
+          line-height 20px
+          text-align center
+          font-weight 500
+          color #ffffff
+        .camp-tag-good
+          background-color #67c23a
+        .camp-tag-wolf
+          background-color red
+      .check-item
+        background-color #b8f1ed
+      .normal-item
+        border 1px solid #eeeeee
+      .target-item
+        background-color pink
+      .txt
+        font-weight 500
+      .check-text
+        color #ffffff
+      .normal-text
+        color black
+    .result-view
+      .tit
+        font-size 14px
+        line-height 20px
+        font-weight 500
+      .content
+        width auto
+        font-size 14px
+    .prompt-view
+      font-size 14px
+      color orange
+      font-style italic
+      font-weight 500
