--- a/client/src/pages/views/room/index.styl
+++ b/client/src/pages/views/room/index.styl
@@ -252,6 +252,8 @@
       padding 10px 20px 20px 20px
       .record-cell
         line-height 16px
+        margin-top 4px
+        margin-bottom 4px
       .cell-title
         text-align center
         font-weight bold
