--- a/client/src/common/common.styl
+++ b/client/src/common/common.styl
@@ -128,11 +128,11 @@
   border-color #e3e3e3!important
   box-shadow none!important
   transition none!important
-.color-success
+.color-success,.color-green
   color #67c23a!important
 .color-red
   color red!important
-.color-main
+.color-main,.color-blue
   color #4169E1!important
 .color-light-grey
   color #898989!important
@@ -144,6 +144,10 @@
   color white!important
 .color-black
   color black!important
+.color-purple
+  color purple!important
+.color-brown
+  color #c28164!important
 .bg-green
   background-color #67c23a!important
 .bg-red
