--- a/client/src/pages/views/room/index.styl
+++ b/client/src/pages/views/room/index.styl
@@ -260,6 +260,19 @@
       line-height 80px
       cursor pointer
       left calc(50% + 150px)
+    .btn-refresh
+      position fixed
+      bottom 80px
+      font-size 14px
+      font-weight bold
+      height 80px
+      width 80px
+      border-radius 40px
+      text-align center
+      line-height 80px
+      cursor pointer
+      left 50%
+      transform translateX(-50%)
     .btn-next-stage
       position fixed
       bottom 80px
