--- a/client/src/common/common.styl
+++ b/client/src/common/common.styl
@@ -154,6 +154,14 @@
   background-color red!important
 .bg-pink
   background-color pink!important
+.bg-purple
+  background-color purple!important
+.bg-black
+  background-color black!important
+.bg-gold
+  background-color gold!important
+.bg-brown
+  background-color #c28164!important
 .bg-light-blue
   background-color #b8f1ed!important
 .w-70
