--- a/client/src/common/common.styl
+++ b/client/src/common/common.styl
@@ -146,6 +146,8 @@
   color black!important
 .color-purple
   color purple!important
+.color-pink
+ color #d4237a!important
 .color-brown
   color #c28164!important
 .bg-green
