--- a/client/src/pages/views/room/index.styl
+++ b/client/src/pages/views/room/index.styl
@@ -284,22 +284,67 @@
     border-radius 4px
     border 1px solid #eeeeee
     overflow hidden
-    height 300px
+    height 500px
     position relative
     margin-left 20px
     margin-right 20px
     padding 10px 20px 20px 20px
     .record-cell
-      line-height 16px
-      margin-top 4px
-      margin-bottom 4px
-    .cell-title
-      text-align center
-      font-weight bold
-      font-size 16px
-      line-height 24px
-      margin-top 8px
-      margin-bottom 8px
+      min-height 20px
+      padding-top 4px
+      padding-bottom 4px
+      .txt
+        font-weight bold
+        font-size 14px
+      .cell-title
+        text-align center
+        font-weight bold
+        font-size 20px
+        line-height 28px
+        margin-top 8px
+        margin-bottom 8px
+      .cell-normal
+        font-size 14px
+        font-weight bold
+        line-height 20px
+      .action-cell,.vote-cell
+        min-height 48px
+        width 100%
+        position relative
+        .from-wrap,.to-wrap
+          width 40%
+          .icon
+            width 40px
+            height 40px
+        .action-wrap
+          width 20%
+          .arrow
+            height 32px
+          .action-name
+            font-size 14px
+            line-height 16px
+            font-weight bold
+        .dead-grey
+          width 100%
+          height 100%
+          position absolute
+          background-color black
+          opacity 0.5
+        .dead-text
+          width 100%
+          height 100%
+          position absolute
+          color white
+          font-weight bold
+          font-size 20px
+          text-align center
+
+      .vote-cell
+        min-height 24px
+        .from-wrap
+          width 55%
+        .to-wrap
+          width 25%
   .content-view-scroll
     overflow-y scroll
 .player-click-modal
