--- a/client/src/common/common.styl
+++ b/client/src/common/common.styl
@@ -155,7 +155,7 @@
 .bg-red
   background-color red!important
 .bg-pink
-  background-color pink!important
+  background-color #d4237a!important
 .bg-purple
   background-color purple!important
 .bg-black
