--- a/client/src/pages/views/room/index.styl
+++ b/client/src/pages/views/room/index.styl
@@ -3,6 +3,11 @@
   height 100%
   background-color #ffffff
   position relative
+  .title-text
+    width 100%
+    font-size 16px
+    font-weight bold
+    text-align center
   .room-wrap
     position relative
     width 100%
@@ -52,64 +57,6 @@
           padding-left 20px
           padding-right 20px
           border-radius 3px
-      .desk-content
-        border-radius 4px
-        border 1px solid #eeeeee
-        overflow hidden
-        width 100%
-        position relative
-        padding 5px
-        flex-wrap wrap
-        flex-direction row
-        display flex
-        .game-title
-          width 100%
-          height 40px
-          font-size 16px
-          font-weight bold
-        .seat-cell
-          width 33.33% - 2.5px
-          height 60px
-          .seat-in
-            width 60px
-            height 60px
-            line-height 60px
-            font-size 14px
-            text-align center
-            border-radius 30px
-            color #ffffff
-            background-color orange
-          .empty-seat
-            width 60px
-            height 60px
-            line-height 60px
-            font-size 14px
-            text-align center
-            border-radius 30px
-            background-color #eeeeee
-          .seat-status
-            font-size 14px
-          .cell-text
-            width 70px
-            text-align center
-            overflow hidden
-            .kick-btn,.kick-btn:focus,.kick-btn:hover,.kick-btn:after
-              border none
-              box-shadow none!important
-        .game-info
-          text-align center
-          overflow hidden
-          position relative
-          display flex
-          width 100%
-          flex-wrap wrap
-          .txt
-            line-height 24px
-            color black
-            font-weight 500
-            width 100%
-            font-style oblique
-            font-size 16px
       .full-btn
         width 100%
     .game-content
@@ -207,24 +154,6 @@
         .vote-icon
           width 24px
           height 24px
-    .header
-      width 100%
-      box-shadow 0 2px 4px rgba(0,21,41,.08)
-      height 60px
-      position relative
-      .room-title
-        font-size 20px
-        color #333333
-        text-align center
-        line-height 60px
-        font-weight 500
-      .welcome-user
-        font-style italic
-      .game-over
-        position absolute
-        top 50%
-        right 20px
-        transform translateY(-50%)
     .footer
       width 100%
       height 60px
@@ -278,75 +207,6 @@
     font-size 16px
     font-weight 500
     text-align center
-.content-wrap
-  width 100%
-  .content-view
-    border-radius 4px
-    border 1px solid #eeeeee
-    overflow hidden
-    height 500px
-    position relative
-    margin-left 20px
-    margin-right 20px
-    padding 10px 20px 20px 20px
-    .record-cell
-      min-height 20px
-      padding-top 4px
-      padding-bottom 4px
-      .txt
-        font-weight bold
-        font-size 14px
-      .cell-title
-        text-align center
-        font-weight bold
-        font-size 20px
-        line-height 28px
-        margin-top 8px
-        margin-bottom 8px
-      .cell-normal
-        font-size 14px
-        font-weight bold
-        line-height 20px
-      .action-cell,.vote-cell
-        min-height 48px
-        width 100%
-        position relative
-        .from-wrap,.to-wrap
-          width 40%
-          .icon
-            width 40px
-            height 40px
-        .action-wrap
-          width 20%
-          .arrow
-            height 32px
-          .action-name
-            font-size 14px
-            line-height 16px
-            font-weight bold
-        .dead-grey
-          width 100%
-          height 100%
-          position absolute
-          background-color black
-          opacity 0.5
-        .dead-text
-          width 100%
-          height 100%
-          position absolute
-          color white
-          font-weight bold
-          font-size 20px
-          text-align center
-
-      .vote-cell
-        min-height 24px
-        .from-wrap
-          width 55%
-        .to-wrap
-          width 25%
-  .content-view-scroll
-    overflow-y scroll
 .player-click-modal
   .content-wrap
     width 100%
