--- a/client/src/pages/views/welcome/index.styl
+++ b/client/src/pages/views/welcome/index.styl
@@ -1,7 +1,7 @@
 .welcome-container
   width 100%
   max-width 500px
-  height 100%
+  height 100vh
   background-color #ffffff
   position relative
   .welcome-wrap
