--- a/client/src/pages/views/room/index.styl
+++ b/client/src/pages/views/room/index.styl
@@ -13,7 +13,7 @@
     width 100%
     height 100vh
     overflow hidden
-    .room-content,.game-content
+    .game-content
       padding 20px
       min-height calc(100% - 120px)
       overflow-y scroll
