--- a/client/src/pages/views/room/index.styl
+++ b/client/src/pages/views/room/index.styl
@@ -109,6 +109,8 @@
         font-size 14px
         line-height 20px
         font-weight 500
+        text-align center
+        width 100%
       .content
         width auto
         font-size 14px
