--- a/client/src/common/common.styl
+++ b/client/src/common/common.styl
@@ -162,6 +162,8 @@
   background-color black!important
 .bg-gold
   background-color gold!important
+.bg-orange
+  background-color orange!important
 .bg-brown
   background-color #c28164!important
 .bg-light-blue
