--- a/client/src/pages/views/room/index.styl
+++ b/client/src/pages/views/room/index.styl
@@ -97,7 +97,7 @@
       .normal-item
         border 1px solid #eeeeee
       .target-item
-        background-color pink
+        background-color #d4237a
       .txt
         font-weight 500
       .check-text
