--- a/client/src/components/game/gameReady/index.styl
+++ b/client/src/components/game/gameReady/index.styl
@@ -86,3 +86,27 @@
       padding-left 20px
       padding-right 20px
       border-radius 3px
+.settings
+  width 100%
+  .setting-cell
+    min-height 40px
+    padding-left 24px
+    padding-right 24px
+    .item-title
+      font-size 14px
+      font-weight bold
+      text-align left
+      min-width 200px
+    .fake-input
+      text-align center
+      width 48px
+      font-size 16px
+    .icon-font
+      cursor pointer
+      font-size 36px
+.setting-modal-title
+  width 100%
+  text-align center
+  font-size 18px
+  font-weight bold
+  font-style italic
