--- a/client/src/pages/views/room/index.styl
+++ b/client/src/pages/views/room/index.styl
@@ -64,7 +64,7 @@
     .content-view
       border-radius 4px
       border 1px solid #eeeeee
-      overflow hidden
+      overflow scroll
       height 300px
       position relative
       margin-left 20px
