--- a/client/src/components/game/gameRecord/index.styl
+++ b/client/src/components/game/gameRecord/index.styl
@@ -4,7 +4,7 @@
     border-radius 4px
     border 1px solid #eeeeee
     overflow hidden
-    height 500px
+    min-height 500px
     position relative
     margin-left 20px
     margin-right 20px
